# bsl-model

./: .gitignore  main.ipynb  pyproject.toml
android_assets/: bsl_model_metadata.json
